linear regression example

--- a/parameters_linear.yaml
+++ b/parameters_linear.yaml
@@ -1,8 +1,9 @@
 model: linear
 method: least_squares
-independent_variable: 'x'
-dependent_variable: 'y'
 steps:
   1: "estimate_slope"
   2: "estimate_intercept"
+metadata:
+  independent_variable: 'x'
+  dependent_variable: 'y'
 data_path: ./data/test.csv
