--- a/parameters_linear_simple.yaml
+++ b/parameters_linear_simple.yaml
@@ -3,7 +3,10 @@ method: simple
 steps:
   1: "estimate_slope"
   2: "estimate_intercept"
+  3: "predict"
+  4: "evaluate_mse"
+  5: "evaluate_r2"
 metadata:
   independent_variable: 'x'
   dependent_variable: 'y'
-data_path: ./data/test.csv
+seed: 0
